helloTriangle.xml - renderdoc