@@ -13,3 +13,12 @@ source {
 
 example("default")
 example("helloTriangle")
+example("nbody")
+
+if (!isExampleProject()) {
+    applicationDefaultJvmArgs += [
+            "--add-exports=java.base/java.lang=ALL-UNNAMED",
+            "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED",
+    ]
+}
